src/App.css
body{
  line-height: 1;
}
/* header */
header {
  position: fixed;
  top: 0px;
  width: 100%;
  height: 80px;
  background-color: white;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2em;
  z-index: 10;
}        

main{
  margin-left: auto;
  margin-right: auto;
  font-family: 'Open Sans', sans-serif;
}

footer{
  max-width: 1040px;
  height: 80px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 8rem;
}

.footer_content{

  font-size: 12pt;
  margin-bottom: 1em;
  font-weight: 400;
  color: gray;
  font-family: 'Roboto', sans-serif;
  font-weight: 300
}

.fab, .fas{
  margin-right: 1em;
  font-size: 16pt;
  vertical-align: middle;
  color:gray!important
}


li{
  list-style-type: disc;
  list-style-position: inside;
}

/* logo     */
#logo {
  position: absolute;
  top: 1em;
  left: 1.5em;
  height: 50px;
  box-sizing: border-box;
  margin: 0 auto;
}

/* nav bar */
.topnav {
  float: right;
  margin-right: 1em;
  display: block;
}

.link  {
  float: right;
  color: #777777;
  text-align: center;
  margin: 28px 16px;
  display: block;
  text-decoration: none;
  font-size: 17px;
  font-family: 'Roboto', sans-serif;
}
.topnav .icon {
  display: none;
}
#resume{
  height: 100%;
  display: inline-block;
  line-height: 1;
  vertical-align: middle;
}

#resumeBtn{
  height: 20px;
}


.link:hover {
  color: lightgray;
} 

.active_link {
  color: #9D2721 !important;
}


/* leading */
.leading {
  display: block;
  margin: 0 auto 30px;
  max-width: 1040px;
  height: 240px;
  margin-top: 10vh;
  padding: 30px;
  background-size: cover;
}

.leading-bigtext {
  color: black;
  font-size: 6vw;
  font-family: 'Montserrat', sans-serif;
  font-weight: bolder;
}

.leading-text {
  font-size: 3.5vw;
  font-family: 'Montserrat', sans-serif;
  margin-top: 15px;
}

@media (max-width: 1100px) {
  .leading-bigtext {
      font-size: 6vw;
  }
  .leading-text {
      font-size: 3.5vw;
  }
}

@media (max-width: 680px) {
  .leading-bigtext {
      font-size: 8vw;
  }
  .leading-text{
  font-size: 5vw;
  }
}

@media (max-width: 370px) {
  .leading-bigtext {
      font-size: 8vw;
  }
  .leading-text{
      font-size: 6vw;
  }
}

/* card grids for portfolio*/
.cards {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(370px, 1fr));
  grid-gap: 30px;
  max-width: 1040px;
  margin: 0 auto 30px;
  margin-top: 10vh;
  transition: opacity 1s linear;

} 

article {
  position: relative;
}
.cardcontainer {
  position: relative;
}

.article-img {
  height: 370px;
  width: 100%;
  object-fit: cover;
}

.article-title {
  color: white;
  font-family: 'Roboto', sans-serif;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

.code {
  position: absolute;
  bottom: 1em;
  left: 1em;
  height: 20px;
  opacity: 0;
  transition: .5s ease;
  z-index: 5;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  z-index:2;
}

#imgGoogleBook {
  background-color: #F8E4B0;
}
/* #img2 {
  background-color: #270A74;
} */
#imgGifTastic {
  background-color: #964B54;
}
/* #img4 {
  background-color: #E2AB09;
} */
#imgGiphy {
  background-color: #282C3A;
}
/* #img6 {
  background-color: #F8E4B0;
} */
/* #img7 {
  background-color: #00AE62
} */
#imgBamazon {
  background-color: #FFC97F
}
#imgFriendFinder {
  background-color: #E1E1E1
}
/* #img10 {
  background-color: #FFCDD3
} */
#imgPetPark {
  background-color: #9FB46F
}
#imgNews{
  background-color: #70889C
}
#imgWIS{
  background-color: #202020
}

#imgReadwithMe{
  background-color: rgb(233, 233, 233)
}

#imgPhotome{
  background-color: #F7E5D9
}

#imgWeather{
  background-color: #8EA1BA
}

#imgLightup{
  background-color: #394552
}

#imgBoardingPass{
  background-color: #6D98E8
}



.cardcontainer:hover .overlay{
  opacity: 1;
}

article:hover .code {
  opacity: 1;
}

/* social media icon */
.fa {
  margin-top: 15px;
  padding: 10px;
  height: 50px;
}

/* Add a hover effect if you want */
.fa:hover {
  opacity: 0.7;
}


/* text for about */
.text {
  max-width: 1040px;
  margin: 0 auto 30px;
  margin-top: 20px;
} 

.textcontainer {
  color: #4A4A4A;
  font-family: 'Open Sans', sans-serif;
  font-size: 17pt;
  line-height: 26pt;
  margin-top: 10vh;
}

h1{

  font-family: 'Montserrat', sans-serif;
  font-size: 55pt;
  font-weight: 700
}

.hi_a{
  color: black
}

.hi_a:hover{
  color: gray
}


h2{
  font-size: 17pt;
  letter-spacing: 0.15em;
  font-family: 'Comfortaa', cursive;
  margin-top: 3em;
  margin-bottom: 1.5em;
  color: #9D2721
}

b{
  font-weight: 700
}

h3{
  font-size: 24pt;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  font-family: 'Open Sans', sans-serif;
  line-height: normal;
  letter-spacing: normal;
}

h4{
  font-size: 24pt;
  margin-bottom: 1em;
}

h5{
  font-size: 24px;
  margin-bottom: 1em;
}


h6{
  font-size: 14px;
  margin-bottom: 1em;
  font-weight: 300;
  line-height: 1.3em

}


p, .p{
  font-size: 18px;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.5em
}


/* tabs */


.tabs{
  display: inline-flex;
}



.tabs-contain{
  margin-right: 1.5rem;
  position: relative;
  z-index: 10;
  display: list-item;
  text-align: -webkit-match-parent;
  list-style-type: none!important;
}

.tabs-contain:hover{
  color: gray
}

.tabs-controls:after {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  display: block;
  width: 0;
  height: 4px;
  background-color: #9D2721;
  border-radius: 2px;
  margin: auto;
  content: '';
  transition: width 0.4s;

}



.tabs-controls.active_tab:after {
  width: 95%;
}

/* 
.show{
  display: grid;
  opacity: 1
}
 */

.project_container{
  max-width: 1040px;
  margin: 0 auto 30px;
}

.project_head{
  margin-top: 6em;
}

.project_headerImg{
  margin-top: 2em;
  width: 100%;
  object-fit: cover
}

.project_info{
  font-size: 14pt;
  margin-bottom: 1em;
  font-weight: 400;
  color: gray
}

.project_body{
  margin-top: 2em;
}

.project_illustration{
  margin-top: 2em;
  margin-bottom: 2em;
  width: 100%;
  object-fit: cover
}


.project_illustration_medium{
  margin-top: 2em;
  margin-bottom: 2em;
  width: 80%;
  object-fit: cover;
  display: block;
  margin-left: auto;
  margin-right: auto;
}


.project_illustration_small{
  margin-top: 2em;
  margin-bottom: 2em;
  width: 60%;
  object-fit: cover;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.project_illustration_extrasmall{
  margin-top: 2em;
  margin-bottom: 2em;
  width: 25%;
  object-fit: cover;
  display: block;
  margin-left: auto;
  margin-right: auto;
}


.project_caption{
  margin-top: 1em;
  margin-bottom: 2em;
  display: block;
  margin-left: auto;
  margin-right: auto;
  font-size: 10pt;
  font-weight: 300;
  color: gray
}

.divider{
  height:4em;
}

@media (max-width: 1041px) {
  .about_content, .project_container, .footer_content{
    margin-left: 16px;
    margin-right: 16px;
  }

}

@media (max-width: 680px) {
    
  .divider{
    height:10px;
  }
  .leading{
    height: 180px;
    margin-bottom: 0px
  }

h1{

  font-size: 36pt;
}

h2{
  font-size: 12pt;
  
}

h3{
  font-size: 12pt;

}

h4{
  font-size: 18pt;

}

h5{
  font-size: 18px;

}


h6{
  font-size: 12px;

}


p, .p{
  font-size: 14px;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.3em
}


.project_info{
  font-size: 10pt;
  line-height: 1.2em
}

project_headerImg{
  margin-top: 1em;
}



.project_illustration{
  margin-top: 1em;
  margin-bottom: 1em;
}


.project_illustration_medium{
  margin-top: 1em;
  margin-bottom: 1em;
}


.project_illustration_small{
  margin-top: 1em;
  margin-bottom: 1em;
}

.project_illustration_extrasmall{
  margin-top: 1em;
  margin-bottom: 1em;
}


}

@media (max-width: 376px) {
    
  .divider{
    height:10px;
  }
  .leading{
    height: 100px;
    margin-bottom: 0px
  }
  .link{
    font-size: 10pt
  }
}

